--- a/webserver/content/404-2/index.html
+++ b/webserver/content/404-2/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> 404 </title>
+		<script src='//use.typekit.com/juf6fmn.js'></script>
     <style>
       body {
         padding: 0;
@@ -33,9 +34,10 @@
   </head>
 
   <body>
-    <section>
-      <h1>Not Found</h1>
-      <p>it can only be attributable to human error.</p>
+		<section>
+      <a href="/"><h1>Not Found</h1>
+      <h2>it can only be attributable to human error.</h2>
+      </a>
     </section>
   </body>
 </html>
